2019-02-12  Andrej Shadura <andrew.shadura@collabora.co.uk>

	Add cp -n support.

2012-05-04  Nitin A Kamble <nitin.a.kamble@intel.com>

	Remove support for automatic de-ANSI-fication.

2007-07-09  Jim Meyering  <jim@meyering.net>

	Compensate for new c99'isms in seq.c.
	* Makefile.maint (patch-check): Use -p1, not -p2, so a patch
	generated via "make patch-check REGEN=1" actually works.
	* src/c99-to-c89.diff: Handle new c99'isms in seq.c.

2007-07-09  Pádraig Brady <P@draigBrady.com>

	Fix the automatic number width formatting in seq.
	* src/seq.c: Fix the -w logic. Ignore spaces and '+'
	characters of input numbers when determining width.
	Set format correctly for input numbers in scientific notation.
	* tests/seq/basic: Add various number width tests.
	Details: <http://thread.gmane.org/gmane.comp.gnu.coreutils.bugs/10903>

2007-07-08  Jim Meyering  <jim@meyering.net>

	Run the coreutils-specific code only if tests/Makefile.am.in exists.
	* bootstrap (mam_template): Move definition out of loop.

	Create symlinks for gl/{lib,m4}/*, just as for gnulib/{lib,m4}/*.
	* bootstrap (symlink_to_dir): Rename function from symlink_to_gnulib.
	Add a directory parameter.  Update all callers.
	(cp_mark_as_generated): Also check for -- and link to -- files in gl/.

	* THANKS: Add Pádraig Brady.

2007-07-08  Jim Meyering  <jim@meyering.net>

	Adapt to deeper hierarchy in gnulib.
	* bootstrap (gnulib_tool): If the destination directory doesn't exist,
	create it. This is required at least for "lib/uniwidth/cjk.h".

	Use <wchar.h>, not "wcwidth.h".
	* src/wc.c: Now that gnulib provides the POSIX-specified <wchar.h>,
	include it and <wctype.h>, rather than "wcwidth.h".
	* src/ls.c: Include <wchar.h>, rather than "wcwidth.h".

2007-07-05  Jim Meyering  <jim@meyering.net>

	setuidgid: set all groups, not just the primary one.
	I wanted to use the xgetgroups function from id.c, so factored
	it out and made it into a non-exiting function (hence the "m"
	prefix rather than "x").